styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Foldit:wght@100;200;300;400;500;600;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,700;0,900;1,100;1,700;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

/* nav */
li {
  list-style: none;
}
a {
  text-decoration: none;
}
.nav__item {
    padding: 10px 20px;
  }
  .MAINLOGO{
    display: none;
  }
  /* .nav__item:hover {
  } */
  .menu_img{
    display: none;
  }
  .menu {
    position: relative;
  }
  .menu:hover .subMenu {
    display: block;
    position: absolute;
    left: -30px;
    top: 45px;
    z-index: 10000000000000000;
  }
  
  .subMenu {
    display: none;
  }
  
  .nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: auto;
    width: 100%;
    /* background-color: white; */
  }
  .nav__link {
    font-family: "Poppins", sans-serif;
   font-size: 16px;
  font-style: normal;
  font-weight: 400;
 line-height: normal;
  }
  .nav__link:hover {
    color: #06b6d4
  }
  .nav__brand {
    text-transform: capitalize;
    font-family: "Lato", sans-serif;
    font-style: normal;
    font-weight: 800;
    font-size: 14px;
    line-height: 17px;
    letter-spacing: 0.02em;

  }
  .nav__toggler {
    display: none;
  }
  .nav__menu {
    display: flex;
    align-items: center;

    justify-content: space-around;
  }
 
  @media screen and (max-width: 768px) {
    .nav {
      display: flex;
      
    }
    .menu_img{
      display: block;
    }

   
    .nav__toggler div {
      width: 2.5rem;
      height: 0.2rem;
      margin: 0.4rem;
      background: #58a857;
      transition: 0.2s ease-in;
    }
    
    .MAINLOGO{
      display: block;
    }
    .menu:hover .subMenu {
      display: block;
      position: absolute;
      left: -30px;
      top: 45px;
      background: #000;
      z-index: 10000000000000000;
    }
  
    .nav__link {
      color: white !important;
    }
    .nav__link:hover {
      color: #aee22b;
    }
  
    .PB {
      font-family: "Poppins";
      font-style: normal;
      font-weight: 700;
      font-size: 21.9217px;
      line-height: 95%;
      /* or 21px */
  
      letter-spacing: -0.04em;
      text-transform: uppercase;
    }
    .nav__toggler {
      display: block;
      cursor: pointer;
    }
    .itemD {
      margin-top: 10px;
    }
    /* .item {
      margin-top: 50px;
    } */

    .nav__menu {
      position: fixed;
      top: 0;
      right: 0;
      height: 100%;
      width: 100vw;
      background: #58a857;
      flex-direction: column;
      justify-content: center;
      padding-bottom: 20px;
      gap: 30px;
      transform: translateX(100%) !important;
      transition: 0.2s ease-in;
    }
  }
  /* Active Class */
  .nav__active {
    transform: translateX(0%) !important;
  }
  
  /* Toggle Icon Animation */
  .toggle div{
    width: 2.5rem;
      height: 0.2rem;
      margin: 0.4rem;
      background: white;
      transition: 0.2s ease-in;
  }

  .toggle .line1 {
    transform: rotate(-45deg) translate(-4px, 5px);
  }
  .toggle .line2 {
    opacity: 0;
  }
  .toggle .line3 {
    transform: rotate(45deg) translate(-4px, -5px);
  }
  
  .nav {
    top: 0;
    left: 0;
    width: 100%;
    position: sticky;
  }  
/* nav */
/* footer */
.fBorder{

  border-top: 0.2px solid #595959;
}

.footerHeadText{
  color: #595959;
/* font-family: Poppins; */
/* font-size: 28px;
font-style: normal;
font-weight: 500;
line-height: normal;
letter-spacing: 0.2px;
margin-bottom: 20px; */
}

/* footer */

/* hero */
.heroTitle{
  color: #333;
font-size: 28px;
font-style: normal;
font-weight: 400;
line-height: normal;
letter-spacing: 0.64px;
}
.herosubT{
  color: #000;
font-size: 22px;
font-style: normal;
font-weight: 300;
line-height: 32px;
}
/* hero */
/* review */
.slidecard{
  border-radius: 16px;
background: #ffffff;
margin: auto;
margin-top: 20px;
box-shadow: 4px 3px 28px 12px rgba(0, 0, 0, 0.03);
}

/* review */

/* contact */
.contactMain{
  border-radius: 129px 20px 20px 20px;
background: #f2f2f2;
}
.cField{
  border-radius: 10px;
  height: 68px;
  

background: var(--white, #FFF);
}
/* contact */
/* services */
.bgBlack {
  background: #262632;
  border: 1px solid #262632;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 20px;
}





.sliding-cards {
  display: flex;
  justify-content: center;
  position: relative;
  width: 100%;
}



.sliding-cards .card {
  --translate-x: 0;
  border-radius: 1.6rem;

  flex: 0 1 auto;
  max-width: 56.2rem;
  overflow: hidden;
  position: absolute;
  text-align: left;
  transform: translateX(0);
  transform: translateX(calc(var(--translate-x)));
  transition: transform .8s cubic-bezier(.16,1,.3,1);
  width: 586px;
  z-index: 2;
}


.sliding-cards .card:first-child {
 
  --translate-x: -48%;
  z-index: 1;
}

.sliding-cards .card:first-child:hover.card {
 
  /* width: 50vw; */
}
.sliding-cards .card:first-child:hover+.card {
  --translate-x: 52%;
  /* width: 50vw; */
}

.sliding-cards .card:nth-child(2) {
    --translate-x: 40%;
}

/* phone */


.bgBlackOne {
  background: #262632;
  border: 1px solid #262632;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 20px;
}





.sliding-cardsOne {
  display: flex;
  justify-content: center;
  position: relative;
  width: 100%;
}



.sliding-cardsOne .card {
  --translate-x: 0;
  border-radius: 1.6rem;
  box-shadow: 0 25px 50px rgba(0,0,0,.8);
  flex: 0 1 auto;
  max-width: 56.2rem;
  overflow: hidden;
  padding: 5rem 6rem;
  position: absolute;
  text-align: left;
  transform: translateX(0);
  transform: translateX(calc(var(--translate-x)));
  transition: transform .8s cubic-bezier(.16,1,.3,1);
  height: 306px;
  z-index: 2;
}


.sliding-cardsOne .card:first-child {
  --translate-x: -78%;
  z-index: 1;
}

.sliding-cardsOne .card:first-child:hover+.card {
  --translate-x: 20%;
}

.sliding-cardsOne .card:nth-child(2):hover+.card {
    --translate-x: 96%;
}
.sliding-cardsOne .card:nth-child(3) {
    --translate-x: 62%;
    z-index: 3;
}

.sliding-cardsOne .card:last-child {
  --translate-x: 84%;
  z-index: 5;
} 

.sliding-cardsOne .card:nth-child(3):hover+.card {
  --translate-x: 108%;
}
/* 3 */

.bgBlackTwo{
  background: #262632;
  border: 1px solid #262632;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 20px;
}





.sliding-cardsTwo {
  display: flex;
  justify-content: center;
  position: relative;
  width: 100%;
}



.sliding-cardsTwo .card {
  --translate-x: 0;
  border-radius: 1.6rem;
  box-shadow: 0 25px 50px rgba(0,0,0,.8);
  flex: 0 1 auto;
  max-width: 56.2rem;
  overflow: hidden;
  padding: 2rem 2rem;
  position: absolute;
  text-align: left;
  transform: translateX(0);
  transform: translateX(calc(var(--translate-x)));
  transition: transform .8s cubic-bezier(.16,1,.3,1);
  height: 371px;
  z-index: 2;
}



.sliding-cardsTwo .card:first-child {
  --translate-x: -78%;
  z-index: 1;
}

.sliding-cardsTwo .card:first-child:hover+.card {
  --translate-x: 20%;
}

.sliding-cardsTwo .card:nth-child(2):hover+.card {
    --translate-x: 96%;
}
.sliding-cardsTwo .card:nth-child(3) {
    --translate-x: 62%;
    z-index: 3;
}

.sliding-cardsTwo .card:last-child {
  --translate-x: 84%;
  z-index: 5;
} 

.sliding-cardsTwo .card:nth-child(3):hover+.card {
  --translate-x: 108%;
}



/* phone */
/*services */
/* swiper */

:root {
  --swiper-navigation-size: 30px!important;

}

 .swiper-button-prev {
    color: #06b6d4!important; 
}

.swiper-button-next {
  color: #06b6d4!important; 

 

  
} 


/* swiper */
.star{
  animation: off-on 7s linear infinite
}

@keyframes off-on {
  0% {
    opacity: 0;
}

75% {
    opacity: 1;
}
100% {
    opacity: 0;
} 
}

